--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.1",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "telegraf": "^4.12.2"
   }
 }
