--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abdul Rafay",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "express": "^4.18.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.1",
